force-app/main/default/objects/Order_Item__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>