force-app/main/default/objects/Order_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <formula>Product_Option__r.Option_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>