force-app/main/default/objects/Order_Item__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>Product_Option__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>