force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Product_Option__c</columns>
    <columns>List_Price__c</columns>
    <columns>Item_Status__c</columns>
    <columns>Member__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All</label>
</ListView>