force-app/main/default/objects/Order_Item__c/listViews/All_Active_or_Draft_Order_Items.listView-meta.xml
<ListView>
    <fullName>All_Active_or_Draft_Order_Items</fullName>
    <columns>NAME</columns>
    <columns>Item_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>List_Price__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Member__c</columns>
    <columns>MemberId__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All Active or Draft Order Items</label>
</ListView>